--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,15 @@
+<% if @name %>
 <h1>My name is <%= @name  %></h1>
+<% end %>
+
+<form action="/named-cat">
+    <div>
+        <label for="name">Name:</label>
+        <input type="text" name="name" />
+        <input type="Submit" value="Submit"/>
+    </div>
+</form>
 <div style='border: 3px dashed red'>
   <img src='http://bit.ly/1eze8aE'>
 </div>
+
